// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render update food form correctly 1`] = `
<div>
  <div
    className="content-container__background"
  >
    <div
      className="content-container__form__update"
    >
      <form
        className="form__update"
        onSubmit={[Function]}
      >
        <h1
          className="page-header__title-update"
        >
           
           
        </h1>
        <span
          className="span-container__update"
        >
          <div
            className="content-container__update-titles"
          >
            <h3
              className="form__heading__update"
            >
              Number of Servings:
            </h3>
            <h3
              className="form__heading__update"
            >
              Serving Size: 
            </h3>
          </div>
          <div
            className="content-container__update"
          >
            <input
              className="text-input__update-form"
              onChange={[Function]}
              placeholder="Enter Number of Servings"
              type="text"
              value=""
            />
            <input
              className="text-input__update-form"
              onChange={[Function]}
              type="text"
              value="0g"
            />
          </div>
        </span>
        <UpdateSummary
          data={
            Object {
              "calories": 0,
              "carbs": 0,
              "fat": 0,
              "targets": Object {
                "calorieTarget": 2000,
                "carbsTarget": 200,
                "fatTarget": 4,
              },
            }
          }
        />
        <span
          className="text-input__span-container3"
        >
          <button
            className="button button--form"
          >
            Update Food
          </button>
          <button
            className="button button--form-remove"
            onClick={[Function]}
          >
            Remove Food
          </button>
        </span>
      </form>
    </div>
  </div>
</div>
`;

exports[`Should render update food form with food data 1`] = `
<div>
  <div
    className="content-container__background"
  >
    <div
      className="content-container__form__update"
    >
      <form
        className="form__update"
        onSubmit={[Function]}
      >
        <h1
          className="page-header__title-update"
        >
           
          BEANS
           
        </h1>
        <span
          className="span-container__update"
        >
          <div
            className="content-container__update-titles"
          >
            <h3
              className="form__heading__update"
            >
              Number of Servings:
            </h3>
            <h3
              className="form__heading__update"
            >
              Serving Size: 
            </h3>
          </div>
          <div
            className="content-container__update"
          >
            <input
              className="text-input__update-form"
              onChange={[Function]}
              placeholder="Enter Number of Servings"
              type="text"
              value="1"
            />
            <input
              className="text-input__update-form"
              onChange={[Function]}
              type="text"
              value="300g"
            />
          </div>
        </span>
        <UpdateSummary
          data={
            Object {
              "calories": 670,
              "carbs": 0,
              "fat": 0,
              "targets": Object {
                "calorieTarget": 2000,
                "carbsTarget": 200,
                "fatTarget": 4,
              },
            }
          }
        />
        <span
          className="text-input__span-container3"
        >
          <button
            className="button button--form"
          >
            Update Food
          </button>
          <button
            className="button button--form-remove"
            onClick={[Function]}
          >
            Remove Food
          </button>
        </span>
      </form>
    </div>
  </div>
</div>
`;
